...

        }
        .navigationBarTitleDisplayMode(.inline)
        .navigationBarBackButtonHidden(true)
        .toolbar {
            ToolbarItem(placement: .navigationBarLeading) {
                ReturnButton()
            }
        }
        .onAppear {
            viewModel.initView(idDrink)
        }
        .environmentObject(viewModel)
...
                            .background {
                                RoundedRectangle(cornerRadius: 5)
                                    .foregroundColor(Color("AccentColor"))
                            }
                            .padding(.top, 28)
                    }
                    SubTitleText("Ingredients")
                    LazyVGrid(columns: columns) {
                        ForEach(drink.measuresAndIngredients(), id: \.ingredient) { info in
                            VStack{
                                IngredientImage(ingredient: info.ingredient)
                                Text("\(info.measure) \(info.ingredient)")
                                    .font(.system(size: 16))
...
